--- a/src/App.css
+++ b/src/App.css
@@ -1,119 +1,77 @@
-.App {
-    text-align: center;
-}
-
-.App-logo {
-    animation: App-logo-spin infinite 20s linear;
-    height: 80px;
-}
-
-.App-header {
-    background-color: #222;
-    height: 150px;
-    padding: 20px;
-    color: white;
-}
-
-.App-title {
-    font-size: 1.5em;
-}
-
-.App-intro {
-    font-size: large;
-}
-
-@keyframes App-logo-spin {
-    from { transform: rotate(0deg); }
-    to { transform: rotate(360deg); }
+#map {
+  height: 100vh;
 }
 
 html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 ul {
-    margin: 0;
-    padding: 0;
+  list-style-type: none;
+  margin: 0;
 }
 
-#map {
-    height: calc(100vh - 325px);
+#navbar {
+  z-index:10;
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 300px;
+  height: 100%;
+  overflow: scroll;
+  background-color: #000;
+}
+
+li {
+  padding: 4px;
+  margin: 4px;
+  margin-left: -30px;
+  color: #bcbaba;
+}
+
+#myInput {
+  width: 100%;
+  height: 30px;
+}
+
+a {
+  color: #bcbaba;
+  text-decoration: none;
+}
+
+a:hover {
+    color: #9b9898;
 }
 
 .header {
-    background-color: #00f;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-}
-.title {
-    margin: 0 10px 0 0;
-    padding: 0;
-    font-size: 25px;
-    color: #ff0;
-}
-
-.search {
-    width: 90%;
-    padding: 10px;
-    border: 0;
-    border-radius: 10px;
-    margin: 10px 0 10px 10px;
-    font-size: 15px;
-    order: 1;
-}
-
-.list-item {
-    list-style-type: none;
-    padding: 10px 0;
-    margin: 0;
-    border-bottom: 2px solid #000;
-    text-align: center;
-    cursor: pointer;
-    box-shadow: 1px 1px 2px #000;
-}
-
-.list-item:hover {
-    background-color: #999;
-    color: #fff;
-}
-
-.list-item:last-child {
-    border-bottom: 0;
-}
-
-.content {
-  padding: 0;
-  background: #fff;
+  position: absolute;
+  z-index: 9;
   width: 100%;
+  height: 30px;
+  background-color: #000000;
 }
 
-.info-content {
-    text-align: center;
+.ham {
+  cursor: pointer;
+  float: right;
+  height: 30px;
+  width: 50px;
+  background-color: #f23726;
+  color: #fefefe;
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@media only screen and (min-width: 768px) {
-    #map {
-        height: calc(100vh - 58px);
-    }
+.ham:hover {
+  transition: 0.1s ease;
+  background-color: #722019;
+  font-size: 18px;
+}
 
-    .header {
-        flex-direction: row;
-    }
-
-    .search {
-        width: 30%;
-        order: 0;
-    }
-
-    .content {
-        width: 32%;
-        position: absolute;
-        top: 58px;
-        left: 10px;
-        z-index: 1;
-    }
+.hide {
+  visibility: hidden;
 }
